visibilityControl behaviour fix & progressbar fix

--- a/src/noty.scss
+++ b/src/noty.scss
@@ -101,7 +101,7 @@ $corner-space: 20px;
   display: none;
 }
 
-.noty_has_timeout .noty_progressbar {
+.noty_has_timeout.noty_has_progressbar .noty_progressbar {
   display: block;
   position: absolute;
   left: 0;
